--- a/Eindopdracht/Eindopdracht/Eindopdracht/Eindopdracht.csproj
+++ b/Eindopdracht/Eindopdracht/Eindopdracht/Eindopdracht.csproj
@@ -14,11 +14,15 @@
     <None Remove="Assets\arrow_back_black_24dp.svg" />
     <None Remove="Assets\baseline_arrow_back_black_24dp.png" />
     <None Remove="Assets\baseline_arrow_back_white_24dp.png" />
+    <None Remove="Assets\Star_empty.png" />
+    <None Remove="Assets\Star_Full.png" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Assets\arrow_back_black_24dp.svg" />
     <EmbeddedResource Include="Assets\baseline_arrow_back_white_24dp.png" />
+    <EmbeddedResource Include="Assets\Star_empty.png" />
+    <EmbeddedResource Include="Assets\Star_Full.png" />
   </ItemGroup>
 
   <ItemGroup>
