--- a/Eindopdracht/Eindopdracht/Eindopdracht/Eindopdracht.csproj
+++ b/Eindopdracht/Eindopdracht/Eindopdracht/Eindopdracht.csproj
@@ -43,6 +43,9 @@
     <EmbeddedResource Update="Views\IntoPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\NoNetworkPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ReviewPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
